--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -35,11 +35,7 @@ i.fa-regular.fa-calendar {
 .ucb-article-category-icon, .ucb-article-tag-icon {
   background-color: #555555;
   color: #e7e7e7;
-  height: 16px;
-  width: 16px;
-}
-.ucb-article-category-icon > svg, .ucb-article-tag-icon > svg{
- padding: 2px;
+  padding: 6px;
 }
 
 .ucb-article-categories div,
@@ -48,7 +44,6 @@ i.fa-regular.fa-calendar {
   display: flex;
   flex-direction: row;
   line-height: 1.5em;
-  padding: 2px;
 }
 
 .ucb-article-categories a:link,
@@ -59,9 +54,9 @@ i.fa-regular.fa-calendar {
 .ucb-article-issue a:visited {
   background: #e7e7e7;
   color: #555;
-  padding: 2px 6px;
+  padding: 6px;
   display: inline-block;
-  margin: 0 5px 5px 0;
+  margin-right: 8px;
 }
 
 .ucb-article-categories a:hover,
