--- a/templates/layout/page--search.html.twig
+++ b/templates/layout/page--search.html.twig
@@ -55,7 +55,8 @@
       <div class="ucb-above-content-region container">
         {{ page.above_content }}
       </div>
-      <div class="layout-content container">
+      <div class="ucb-search-page-content container">
+	    <h1>Search</h1>
         {{ page.content }}
       </div>
     </main>
