--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -151,7 +151,7 @@
   {% endblock %}
 
   {# MAIN PAGE CONTENT #}
-  <div class="ucb-page-content">
+  <div class="ucb-page-content{% if ucb_heading_font == 'normal' %} ucb-heading-font-normal{% endif %}">
   {% if (show_breadcrumb) and (page.breadcrumb|render|striptags|trim) %}
   <div class="ucb-breadcrumb-region">
     {{ page.breadcrumb }}
