--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -389,18 +389,11 @@ td>h3>a{
                                     /></a>
                                   </td>
                                 </tr>
+                                {# Newsletter Taxonomy Image -- might need to be a separate table #}
                                 <tr>
-                                  <td class="newsletter-name">
-                                    <h1>
-                                      <img
-                                        alt="TEST"
-                                        height="167"
-                                        id="newsletter-logo"
-                                        src="https://live-ucbdev-sandbox-express.pantheonsite.io/sites/default/files/styles/medium/public/newsletter-name-image/brooke-cagle-LnT_OqSf6Bs-unsplash.jpg?itok=kRPsnkxx"
-                                        width="250"
-                                      />
-                                    </h1>
-                                  </td>
+                                    <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 10px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
+                                        <img style="-ms-interpolation-mode: bicubic; clear: both; display: block; float: left; height: 167px !important; max-width: 100% !important; outline: none; text-decoration: none; width: 250px !important; max-height: auto !important;"src="{{base_url}}{{ file_url(node.field_newsletter_type.entity.field_newsletter_name_image.entity.uri.value) }}">
+                                    </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -442,108 +435,21 @@ td>h3>a{
                       <tbody>
                         <tr>
                           <td class="wrapper last">
-                            <table class="twelve columns" role="presentation">
-                              <tbody>
+                            {# Intro Image and Intro #}
+                            <table role="presentation" border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; padding-bottom:20px;font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: white;">
                                 <tr>
-                                  <td
-                                    class="text-pad padding-top padding-bottom"
-                                  >
-                                    <div class="content-padding">
-                                      <div class="intro-image">
-                                        <table role="presentation">
-                                          <tbody>
-                                            <tr>
-                                              <td class="padding-bottom">
-                                                <div
-                                                  class="field field-name-field-newsletter-intro-image field-type-image field-label-hidden"
-                                                >
-                                                  <div class="field-items">
-                                                    <div
-                                                      class="field-item even"
-                                                    >
-                                                      {% if
-                                                      content.field_newsletter_intro_image|render
-                                                      %}
-                                                      <img
-                                                        alt="asd"
-                                                        class="image-email_medium"
-                                                        height=""
-                                                        src="{{base_url}}{{file_url(node.field_newsletter_intro_image.entity.field_media_image.entity.fileuri)}}"
-                                                        width="560"
-                                                      />
-                                                      {% endif %}
-                                                    </div>
-                                                  </div>
-                                                </div>
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
-                                      </div>
-                                      <div class="intro-text">
-                                        <div
-                                          class="field field-name-body field-type-text-with-summary field-label-hidden"
-                                        >
-                                          <div class="field-items">
-                                            <div class="field-item even">
-                                              <p>
-                                                This is a giant intro. This is a
-                                                giant intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant intro. 
-                                              </p>
-                                              <p>
-                                                This is a giant intro. This is a
-                                                giant intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant intro. 
-                                              </p>
-                                              <p>
-                                                This is a giant intro. This is a
-                                                giant intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant
-                                                intro. This is a giant intro. 
-                                              </p>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </td>
-                                  <td class="expander"></td>
+                                    <h1 id="newsletter-email-title" style="{{headerStyles}}padding: 30px 30px 15px 60px;font-size: 52px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"> {{ label }}</h1>
+                                  <td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+                                <!-- Intro Img --> 
+                                    {% if content.field_newsletter_intro_image|render %}
+                                    <img id="newsletter-email-intro-img" src="{{base_url}}{{file_url(node.field_newsletter_intro_image.entity.field_media_image.entity.fileuri)}}" width="100%" style="margin-bottom: 20px;">
+                                    {% endif %}
+                                <!-- Intro Text-->
+                                    {% if content.field_newsletter_intro_body|render %}
+                                    <div id="newsletter-intro-body">{{ content.field_newsletter_intro_body }}</div>
+                                    {% endif %}
+                                    </td>
                                 </tr>
-                              </tbody>
                             </table>
                           </td>
                         </tr>
